syntax="proto3";
package  client_streaming;
option java_package="com.dev.s01";
option java_multiple_files=true;

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

message DepositRequest {
  oneof request {
    int32 account_number = 1;
    Money money = 2;
  }
}
service BankService {
  // client streaming
  rpc Deposit(stream DepositRequest) returns (AccountBalance);

}